# auto-hwp

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.service  LICENSE-MIT  NOTICE  PLAN.md  README.en.md  README.md  ROADMAP.md  benchmark.hwp  benchmark1.hwp  deny.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-demo.yml  publish.yml
apps/hwp-lab/: .env.example  QA.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/hwp-lab/e2e/: autosave-recovery-052.spec.ts  bulk-fill-073.spec.ts  cell-caret-053.spec.ts  editing-027.spec.ts  (+18 more)
assets/brand/: banner.html  bulk-review-mock.html  shot.mjs
benchmarks/: benchmark1.hwpx  benchmark2.hwp
corpus/: GOV-SOURCES.md  README.md  sample.hwpx
corpus/hwpx/: 00_smoke_min.hwpx
crates/auto-hwp-cli/: Cargo.toml
crates/auto-hwp-cli/src/: fill.rs  main.rs
crates/hwp-ai/: Cargo.toml
crates/hwp-ai/src/: anthropic.rs  content.rs  edit.rs  lib.rs  ollama.rs  openrouter.rs  secret.rs
crates/hwp-ai/tests/: vibe_edit.rs
crates/hwp-core/: Cargo.toml
crates/hwp-core/src/: lib.rs
crates/hwp-core/tests/: zzz_cellspace_probe.rs
crates/hwp-crypto/: Cargo.toml
crates/hwp-crypto/src/: lib.rs
crates/hwp-export/: Cargo.toml
crates/hwp-export/src/: bmp.rs  lib.rs  pdf.rs
crates/hwp-fidelity/: Cargo.toml
crates/hwp-fidelity/src/: lib.rs
crates/hwp-fidelity/tests/: benchmark.rs
crates/hwp-foreign/: Cargo.toml
crates/hwp-foreign/src/: docx.rs  lib.rs  pdf.rs
crates/hwp-hwpx/: Cargo.toml
crates/hwp-hwpx/src/: export.rs  lib.rs  package.rs  parse.rs  serialize.rs  synth.rs  text.rs
crates/hwp-hwpx/tests/: frame_table_060.rs  hostile_inputs.rs  table_anchor_057.rs
crates/hwp-hwpx/tests/fixtures/hostile/: README.md
crates/hwp-ingest/: Cargo.toml
crates/hwp-jsx/: Cargo.toml
crates/hwp-jsx/src/: css.rs  equality.rs  jsx.rs  lib.rs  map.rs  op.rs  project.rs
crates/hwp-jsx/tests/: roundtrip.rs
crates/hwp-mcp/: Cargo.toml
crates/hwp-mcp/src/: lib.rs  main.rs  network.rs  server.rs
crates/hwp-mcp/tests/: schema_v0.rs  table_anchor_057.rs
crates/hwp-model/: Cargo.toml
crates/hwp-model/src/: capability.rs  document.rs  error.rs  font_class.rs  layout.rs  lib.rs  normalize.rs  style.rs  types.rs
crates/hwp-ops/: Cargo.toml
crates/hwp-ops/src/: chart_gen.rs  find.rs  lib.rs
crates/hwp-oracle/: Cargo.toml
crates/hwp-oracle/src/: lib.rs
crates/hwp-render/: Cargo.toml
crates/hwp-render/src/: lib.rs
crates/hwp-render/tests/: corpus_svg.rs
crates/hwp-rhwp/: Cargo.toml
crates/hwp-rhwp/src/: chart_render.rs  eq_render.rs  lib.rs  lift.rs
crates/hwp-rhwp/tests/: equation_render.rs  hostile_rhwp.rs  panose_lift.rs  roundtrip_pages.rs  self_diag_no_loss.rs
crates/hwp-session/: Cargo.toml
crates/hwp-session/src/: lib.rs
crates/hwp-typeset/: Cargo.toml
crates/hwp-typeset/src/: lib.rs  old_hangul.rs  place.rs  shaper.rs
crates/hwp-viewer/: Cargo.toml  README.md  tauri.conf.json
crates/hwp-viewer/capabilities/: default.json
crates/hwp-viewer/icons/: icon.icns
crates/hwp-viewer/src/: lib.rs  main.rs  server.rs
crates/hwp-viewer/ui/: index.html  main.js  package.json  pnpm-lock.yaml  style.css  tsconfig.json  vite.config.ts
crates/hwp-viewer/ui/src/: App.tsx  Chat.tsx  Composer.tsx  ImageOverlay.tsx  Modal.tsx  Palette.tsx  PendingInline.tsx  TableOverlay.tsx  WorkspaceShell.tsx  api.ts  caret.ts  commands.ts  engineStub.ts  main.tsx  presets.ts  richedit.ts  sanitize.ts  shell.d.ts  styles.css  toast.tsx  ui.tsx
crates/hwp-wasm/: Cargo.toml
crates/hwp-wasm/src/: lib.rs
crates/tf-hwp-cli/: Cargo.toml
crates/tf-hwp-cli/src/: main.rs
docs/: AI-LOCAL-CONTROL-PLAN.md  BENCHMARK1-ROW-AUDIT.md  CARET-GAP.md  COMPLETION-ROADMAP.md  CURRENT_STATE.md  DEPENDENCY-STRATEGY.md  EMBED-GUIDE.md  FIDELITY.md  FIGMA-GRADE-UX.md  FONT-CATALOG.md  HWP-CONVERSION-FIDELITY.md  INTEGRATION-HANDOVER.md  INTENT-SCHEMA.md  JOURNAL.md  LICENSE-POLICY.md  MCP-GUIDE.md  PIVOT-DESIGN.md  PRODUCT-DIRECTION-V2.md  PRODUCT-DIRECTION.md  PRODUCTION-DIAGNOSIS.md  PRODUCTION-ROADMAP.md  SDK-LAYERS.md  SELF-OWNED-ENGINE-ROADMAP.md  SERVICE-DEPLOY.md  TAURI-CONVERGENCE.md  USER-BOTTLENECK-DIAGNOSIS.md  WASM-FEASIBILITY.md
docs/history/: CHECKLIST.md  README.md  ROADMAP.md
docs/issues/: 001-native-numbering-bullets.md  002-custom-tabs-numbering-formats.md  003-header-parse-in-dedup.md  004-ai-fill-from-source-and-prompt-caching.md  005-page-section-layout.md  006-image-embedding.md  007-wasm-smoke-build.md  008-intent-schema-v0.md  009-anchor-chips.md  010-ai-preview-apply-undo.md  011-content-presets.md  012-hwp-session-extraction.md  013-headless-service-container.md  014-input-hardening.md  015-wasm-npm-package.md  016-react-component-library.md  017-hwp-mcp-wasm.md  018-pdf-font-injection.md  019-business-plan-k-poc.md  020-benchmark1-page1-spill.md  021-selection-ux-v2.md  022-font-system-v1.md  023-cell-level-marking-web.md  024-para-border-frame-overflow.md  025-layout-cache-perf.md  026-editor-core-sdk.md  027-editing-parity-ui.md  028-floating-selection-toolbar.md  029-integration-handover.md  030-render-perf-cursor.md  031-resize-reliability.md  032-figma-inplace-edit.md  033-figma-grade-research.md  034-page-selective-refresh.md  035-pan-zoom-gestures.md  036-keyboard-cell-nav.md  037-page-virtualization.md  038-hover-cursor-system.md  039-context-menu.md  040-rich-inplace-editor.md  (+33 more)
examples/ai-proxy-express/: README.md  package.json  server.mjs
examples/vite-embed/: .gitignore  README.md  index.html  package.json  playwright.config.ts  vite.config.ts
scripts/: app.sh  bench-compare.py  bench-corpus.sh  caret-geometry-smoke.mjs  context_restore.sh  fetch-gov-corpus.mjs  golden.sh  handover-verify.sh  image-geometry-smoke.mjs  install-h2orestart.sh  vendor-rhwp.sh  verify-local.sh  wasm-smoke.sh
scripts/figma-grade/: README.md  measure-browser.mjs  measure-edit-tax-034.mjs  measure-engine.mjs  measure-virtualization-037.mjs  nodes.sh
skills/hwp/: SKILL.md
(+26 files in other folders)
