[workspace]
resolver = "2"
members = ["crates/*"]
# The vendored rhwp bootstrap is its own package — keep it out of our workspace
# (it builds standalone; hwp-rhwp path-deps into it behind the `rhwp` feature).
# `.claude` shields agent worktrees nested under the repo (.claude/worktrees/*): without it,
# an excluded package inside a worktree (its rhwp copy) keeps walking UP and wrongly resolves
# against THIS root workspace — `cargo fmt --all`/`cargo metadata` then fail in every worktree
# (issue 055 실측; cargo excludes anything UNDER a listed directory).
exclude = ["external/rhwp", ".claude"]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
repository = "https://github.com/USER/auto-hwp"
authors = ["auto-hwp contributors"]

[workspace.dependencies]
# --- BORROW-STABLE external deps (pure-Rust, wasm-ok where used in core) ---
thiserror = "2"
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
# RustCrypto (MIT OR Apache-2.0, pure-Rust, wasm-safe). Distribution-doc AES-128-ECB is driven by
# `aes` + its re-exported `cipher` traits directly (the `ecb` crate is avoided — single-license MIT).
# `sha1` is used ONLY by hwp-crypto's golden-vector synthesis (dev-dep), never on the decrypt path.
aes = "0.8"
cipher = "0.4"
sha1 = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# --- internal crates ---
hwp-model = { path = "crates/hwp-model" }
hwp-ingest = { path = "crates/hwp-ingest" }
hwp-hwpx = { path = "crates/hwp-hwpx" }
hwp-typeset = { path = "crates/hwp-typeset" }
hwp-render = { path = "crates/hwp-render" }
hwp-ops = { path = "crates/hwp-ops" }
hwp-ai = { path = "crates/hwp-ai" }
hwp-crypto = { path = "crates/hwp-crypto" }
hwp-rhwp = { path = "crates/hwp-rhwp" }
hwp-oracle = { path = "crates/hwp-oracle" }
hwp-core = { path = "crates/hwp-core" }
hwp-mcp = { path = "crates/hwp-mcp" }
hwp-session = { path = "crates/hwp-session" }
hwp-jsx = { path = "crates/hwp-jsx" }
hwp-export = { path = "crates/hwp-export" }
hwp-foreign = { path = "crates/hwp-foreign" }

[profile.release]
opt-level = 3
lto = "thin"

# wasm 번들 다이어트(055 후속, rhwp v0.7.19 성장 +1.5MB 상쇄): 릴리스와 분리된 wasm 전용 프로필 —
# 크기 우선(opt-level z)·fat LTO·단일 codegen unit. 네이티브 릴리스(CLI/게이트) 빌드 시간엔 무영향.
[profile.wasm-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
