[package]
name = "auto-hwp-cli"
description = "auto-hwp CLI: detect / info / extract-text / oracle."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "auto-hwp"
path = "src/main.rs"

[features]
default = []
# Compile the rhwp bootstrap so `render`/`view`/`fidelity` compare work (needs external/rhwp submodule).
rhwp = ["hwp-core/rhwp", "hwp-fidelity/rhwp"]
# Score `layout-check` + drive `own-render` with the real rustybuzz shaper (real Latin advances +
# EM-grid Hangul) instead of the per-script approximation.
shaper = ["hwp-core/shaper", "hwp-typeset/shaper", "hwp-render/shaper", "hwp-export/shaper", "hwp-session/shaper"]
# PHASE P4: enable `export-pdf` (krilla PDF backend from our own layout + Korean font embedding).
pdf = ["hwp-export/pdf", "hwp-session/pdf"]
# PHASE P5: open `.docx` (full-ish edit) — forwards to hwp-foreign's pure-Rust docx reader.
docx = ["hwp-core/docx"]
# PHASE P5: open `.pdf` (VIEW-MOSTLY: positioned glyphs/overlay) — forwards to hwp-foreign's lopdf reader.
pdfin = ["hwp-core/pdfin"]
# Enable the AI providers: Anthropic BYOK, local Ollama (Qwen3), OpenRouter (BYOK, OpenAI-compatible).
ai = ["hwp-ai/anthropic", "hwp-ai/keyring", "hwp-ai/local", "hwp-ai/openrouter"]

[dependencies]
hwp-model = { workspace = true }
hwp-ingest = { workspace = true }
hwp-hwpx = { workspace = true }
hwp-ops = { workspace = true }
hwp-ai = { workspace = true }
hwp-core = { workspace = true }
hwp-jsx = { workspace = true }
hwp-export = { workspace = true }
# Shell-independent session logic (issue 012): the CLI's own-render / export-html / export-pdf now
# consume the SAME functions the viewer does, instead of duplicating own_render_fonts + the emit calls.
hwp-session = { workspace = true }
hwp-oracle = { workspace = true }
hwp-typeset = { workspace = true }
hwp-render = { workspace = true }
hwp-fidelity = { path = "../hwp-fidelity" }
clap = { workspace = true }
