[package]
name = "hwp-ai"
description = "AI layer: LlmProvider trait + ai_fill (op-bus), AST→Markdown projection. Anthropic BYOK provider behind the `anthropic` feature (native-only)."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# BYOK cloud provider (Anthropic Messages API). Native-only; pulls reqwest.
anthropic = ["dep:reqwest"]
# Local model provider (Ollama HTTP, e.g. Qwen3) — out-of-process, our-controlled generation.
local = ["dep:reqwest"]
# Store the BYOK key in the OS keychain (ENV var still overrides). Native-only.
keyring = ["dep:keyring"]

[dependencies]
hwp-model = { workspace = true }
hwp-ops = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"], optional = true }
