[package]
name = "hwp-core"
description = "Capability registry / façade. Assembles the best-available implementation per capability (our own first; rhwp bootstrap when wired)."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Forwards to hwp-rhwp's `rhwp` feature to enable the bootstrap engine.
rhwp = ["hwp-rhwp/rhwp"]
# Forwards to the rustybuzz shaper so the layout oracle scores against real font advances.
shaper = ["hwp-rhwp/shaper"]
# P5: DOCX ingest (full-ish edit). Forwards to hwp-foreign's pure-Rust `docx` reader.
docx = ["hwp-foreign/docx"]
# P5: PDF ingest (VIEW-MOSTLY). Forwards to hwp-foreign's `pdfin` reader (lopdf).
pdfin = ["hwp-foreign/pdfin"]

[dependencies]
hwp-model = { workspace = true }
hwp-ingest = { workspace = true }
hwp-hwpx = { workspace = true }
hwp-typeset = { workspace = true }
hwp-render = { workspace = true }
hwp-ops = { workspace = true }
hwp-rhwp = { workspace = true }
hwp-foreign = { workspace = true }

[dev-dependencies]
# Build a tiny in-memory `.docx` for the P5 `Engine::open` DOCX-routing test (docx feature only).
zip = { workspace = true }
