[package]
name = "hwp-hwpx"
description = "HWPX (OWPML) container reader + text extraction + our own Hancom-acceptable HWPX serializer/export contract."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hwp-model = { workspace = true }
hwp-ingest = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
# Integration tests (tests/hostile_inputs.rs) build hostile archives in-memory + match the typed
# limit errors, so they need direct access to zip's writer and hwp-ingest's DocLimit/HardenedError.
hwp-ingest = { workspace = true }
zip = { workspace = true }
