[package]
name = "hwp-rhwp"
description = "rhwp bootstrap adapter — rhwp-backed impls of our capability traits, behind the `rhwp` feature. Without the feature it's inert (rhwp is not compiled), so default builds stay fast."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable to compile + call the vendored rhwp (external/rhwp submodule).
rhwp = ["dep:rhwp"]
# Score the layout oracle (`layout_fidelity`) with the REAL rustybuzz shaper instead of the
# per-script approximation. Pulls hwp-typeset's `shaper` feature (rustybuzz + ttf-parser).
shaper = ["hwp-typeset/shaper"]

[dependencies]
hwp-model = { workspace = true }
# Shared input-hardening limits + typed DocLimit/HardenedError (issue #014). Used by the guarded
# HWP5 entry point (raw-size cap + catch_unwind → DocLimit::Panicked).
hwp-ingest = { workspace = true }
# Our own layout engine — used by the rhwp-feature `layout_fidelity` oracle to score our
# line-breaking + pagination against Hancom's actual linesegs (which rhwp parses).
hwp-typeset = { workspace = true }
# Vendored fork (kwakseongjae/rhwp @ v0.7.15). Optional: only COMPILED with the `rhwp`
# feature, but the submodule must be present for `cargo metadata` to resolve.
# Single crate (rlib) → in-process native + wasm integration.
rhwp = { path = "../../external/rhwp", optional = true }

[dev-dependencies]
# Integration test (tests/hostile_rhwp.rs) matches the typed DocLimit/HardenedError from the
# catch_unwind boundary.
hwp-ingest = { workspace = true }
# Issue 024 regression (tests/self_diag_no_loss.rs): render benchmark1 to the REAL own-render SVG and
# assert the 자가진단표's "…이사장 귀하" survives AND sits inside the outer 상자 (no silent overflow drop).
hwp-render = { workspace = true }
