[package]
name = "hwp-typeset"
description = "Our separable typography/layout engine (자간/장평/배분·나눔/금칙/줄간격). Phase 0: trait + naive impl; grows to replace the rhwp bootstrap."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hwp-model = { workspace = true }
# Real text shaper (pure-Rust HarfBuzz port) + font tables — feature-gated so the DEFAULT build
# keeps the per-script approximation and pulls NO extra deps (network-safe / wasm-friendly).
rustybuzz = { version = "0.20", optional = true }
ttf-parser = { version = "0.25", optional = true }

[features]
default = []
# Swap in RealFontMetrics (rustybuzz advances + real font metrics). Off by default → no extra deps.
shaper = ["dep:rustybuzz", "dep:ttf-parser"]
