[package]
name = "hwp-viewer"
description = "tf-hwp Tauri 2 viewer shell (A2): open an HWPX, render pages faithfully (rhwp SVG), and run AI content through the op-bus. Hosts the A3 embedded loopback control server."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "hwp_viewer_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "hwp-viewer"
path = "src/main.rs"

[features]
# rhwp render is ON by default — a viewer without faithful page rendering is pointless, and this
# removes the `--features rhwp` footgun (plain `cargo run -p hwp-viewer` now renders + captures).
default = ["rhwp"]
rhwp = ["hwp-core/rhwp", "hwp-mcp/rhwp"]
# In-app AI generation (natural language → AiContent via a provider). Kept SEPARATE from default so
# plain/CI builds stay lean (no reqwest/keyring). Run dev with: cargo tauri dev -f rhwp ai
ai = ["hwp-ai/anthropic", "hwp-ai/keyring", "hwp-ai/local", "hwp-ai/openrouter"]
# Forward the real rustybuzz shaper down to the OWN renderer (hwp-typeset/hwp-render) so the in-app
# "자체 렌더" view's glyph x-positions are real (matches the CLI `own-render --features shaper`). Also
# forwards to hwp-export so the PDF placement uses the real shaper when `pdf` is on.
shaper = ["hwp-typeset/shaper", "hwp-render/shaper", "hwp-export/shaper"]
# PDF export (own layout → paint IR → krilla, Korean font subsetting) for the `export_doc_pdf`
# command. SEPARATE from default so plain/CI builds pull NO heavy krilla/font deps; enable with
# `cargo tauri dev -f "rhwp ai pdf"`. Without it `export_doc_pdf` returns a clear error.
pdf = ["hwp-export/pdf"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
hwp-core = { workspace = true }
hwp-mcp = { workspace = true }
hwp-ai = { workspace = true }
hwp-model = { workspace = true }
# JSX(content)/CSS(design) → HTML preview path (the pivot's render): emit + emit_html on the live doc.
hwp-jsx = { workspace = true }
hwp-export = { workspace = true }
# OUR OWN engine: place_doc (hwp-typeset) → paint IR → SvgSink (hwp-render) for the in-app "자체 렌더"
# fidelity view — the self-owned render path (no rhwp), same code the CLI `own-render` subcommand runs.
hwp-typeset = { workspace = true }
hwp-render = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# A3 embedded control server uses pure std::net + these (already in the workspace lock):
subtle = "2"
getrandom = "0.3"
# Decode chat-attached images (base64 over IPC) before stashing them to a temp file for insertion.
base64 = "0.21"
